Bug 44423 - FILESAVE: copying a cell marks the sheet as changed
Summary: FILESAVE: copying a cell marks the sheet as changed
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.3.4 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:3.6 target:3.5
Keywords:
Depends on:
Blocks:
 
Reported: 2012-01-03 08:49 UTC by Alex Howansky
Modified: 2012-01-07 19:06 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alex Howansky 2012-01-03 08:49:01 UTC
Problem description:

Copying the contents of a cell marks the sheet as unsaved, even if no changes are made.

Steps to reproduce:

1. Create a new sheet and put a few values in some cells.
2. Save the document.
3. Close the document.
4. Open the document.
5. Triple click a cell that has contents. Note the contents are selected.
6. Click outside the cell to select another cell. Note that the save icon remains greyed out.
7. Triple click a cell that has contents. Note the contents are selected.
8. Select Edit->Copy or press Ctrl-C.
9. Click outside the cell to select another cell. Note that the save icon is now available.
10. Close the sheet. Note that you are prompted to save despite having made no changes.

Current behavior:

You are prompted to save when no changes have been made.

Expected behavior:

Copying the contents of a cell should not set the document to an unsaved state.

Platform (if different from the browser): I've seen this happen on every platform I use -- Win 7 64 bit, Ubuntu 10.04 and later 32 and 64 bit, and Fedora 14 and later 32 and 64 bit
              
Browser: Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/535.1 (KHTML, like Gecko) Ubuntu/11.04 Chromium/14.0.835.202 Chrome/14.0.835.202 Safari/535.1
Comment 1 Markus Mohrhard 2012-01-07 19:06:11 UTC
Ok. I have a fix for 3.5.