don't set document modified for copy and select all, fdo#44423